# Monster-Monster-Asteroid-Madness

./: AUTHORS  Dockerfile  Makefile.in  README  README.md  aclocal.m4  build.sh  configure  configure.in  env  makefile  run
data/: sprites.h  workerm.xcf
data/custom/: _stalkrow.mmam  crash_site2.mmam  crash_site3.mmam  crysillian_hd.mmam  crysillian_ufos.mmam  orick_main_base.mmam  orick_war1.mmam  raider_base2.mmam  raider_base4.mmam  stalkplant_farm.mmam
doc/html/: mmam.html
libs/adime-2.2.1/: fix.sh  license.txt  thanks.txt
libs/adime-2.2.1/docs/man/: ADIME_VERSION_MINOR.3  adime_bmp.3  adime_d_calc_edit_result_proc.3  adime_d_check_proc.3  adime_d_greyable_check_proc.3  adime_d_list_proc.3  adime_d_multiline_text_proc.3  adime_dialogf.3  adime_draw_empty_button.3  adime_draw_picture_button.3  adime_draw_picture_button_down.3  adime_draw_text_button_down.3  adime_exit.3  adime_fill_textout.3  adime_font.3  adime_lowlevel_vdialogf.3  adime_title_font.3
libs/adime-2.2.1/docs/src/: readme._tx  wishlist._tx
libs/adime-2.2.1/docs/texi/: adime.texi
libs/adime-2.2.1/docs/txt/: adime.txt  wishlist.txt
libs/adime-2.2.1/examples/: exanim  exchain.c  exdialog
libs/adime-2.2.1/include/: fortify.h  fortify2.h
libs/adime-2.2.1/misc/: Info.plist  TemplateInfo.plist  fixver.sh  makefile.def  makefile.doc  makefile.qnx  makefile.vc  scanexp.c
libs/adime-2.2.1/src/: dbutrow.c  dbutton.c  ddialogf.c  dgreybol.c  dline.c  dpintege.c  eval.c
libs/alogg-1.3.7/: alogg-debug-1.3.7-1-pentium4.pkg.tar.zst
libs/alogg-1.3.7/pkg/alogg/: .BUILDINFO  .PKGINFO
libs/alogg-1.3.7/pkg/alogg-debug/: .PKGINFO
libs/alogg-1.3.7/src/alogg-1.3.7.orig/: alogg_encode  alogg_play  alogg_stream
libs/alpng-1.3/: ex01
mmam/: .gitignore  ChangeLog  Makefile.am  NEWS  arch32-setup.txt  build.sh  configure.in  loadpng.txt
mmam/data/: censusrip.pl  demolic.txt  exportheaders.pl  exportheaders.pl~  mmam.nsi  names.cfg1  sounds.h  sounds.h~  sprites.h~  win-mmam.cfg
mmam/data/custom/: _basic.mmam  beholder_hd.mmam  big_vs_hovelers.mmam  crash_site1.mmam  crysillian_ruins.mmam  humannames.conf  instructs.conf  molber_ranch_chal.mmam  orick_scout_party.mmam  orick_small_base.mmam  orick_war2.mmam  police_vs_raiders.mmam  raider_base1.mmam  raider_base3.mmam  raider_ship_fleet.mmam  raider_ship_fleet2.mmam  tournement.conf  warriorname.conf
mmam/libs/adime-2.2.1/: changes.txt  fix.bat  readme.txt
mmam/libs/adime-2.2.1/docs/chm/: adime.chm
mmam/libs/adime-2.2.1/docs/man/: ADIME_VERSION_MAJOR.3  adime_callback.3  adime_clean_screen.3  adime_d_button_proc.3  adime_d_double_calc_edit_proc.3  adime_d_edit_proc.3  adime_d_int_calc_edit_proc.3  adime_d_line_proc.3  adime_d_text_list_proc.3  adime_d_window_proc.3  adime_double2string.3  adime_draw_text_button.3  adime_evaluate.3  adime_file_select.3  adime_init.3  adime_lowlevel_dialogf.3  adime_scancode_to_pretty_name.3  adime_scancode_to_short_name.3  adime_short_name_to_scancode.3  adime_udouble2string.3  adime_uevaluate.3  adime_va_list.3  adime_va_start.3  adime_vdialogf.3  adime_window_visible.3  adime_yield.3
mmam/libs/adime-2.2.1/docs/src/: adime._tx  changes._tx  dime._tx  expressi._tx  internal._tx  license._tx  thanks._tx
mmam/libs/adime-2.2.1/docs/txt/: expressi.txt  internal.txt
mmam/libs/adime-2.2.1/examples/: exanim.c  exbutrow  exbutrow.c  exchain  exdialog.c
mmam/libs/adime-2.2.1/include/: ufortify.h
mmam/libs/adime-2.2.1/lib/bcc32/: adime.def
mmam/libs/adime-2.2.1/lib/mingw32/: adime.def
mmam/libs/adime-2.2.1/misc/: dllsyms.lst  fixdll.sh  keynames.sh  makefile.all  makefile.bcc  makefile.dj  makefile.djx  makefile.mgw  makefile.mgx  makefile.osx  makefile.uni  makefile.ver  makefile.wat  project.pbxproj  template.c  zipup.sh
mmam/libs/adime-2.2.1/misc/makedoc/: makedoc
mmam/libs/adime-2.2.1/src/: adialogf.c  adime.c  calcedit.c  clipboar.c  dbool.c  dchain.c  dfilenam.c  dfloat.c  dinteger.c  dlists.c  dnothing.c  dpfloat.c  dstring.c  edit.c  fortify.c  fortify2.c  fsel.c  gui.c  keynames.c  messbox.c  nan.c  parsemod.c  register.c
mmam/libs/alogg-1.3.7/: PKGBUILD  alogg-1.3.7-1-pentium4.pkg.tar.zst
mmam/libs/alogg-1.3.7/pkg/alogg/: .MTREE
mmam/libs/alogg-1.3.7/pkg/alogg-debug/: .BUILDINFO  .MTREE
mmam/libs/alogg-1.3.7/src/alogg-1.3.7.orig/: alogg-config  alogg_dat
mmam/src/: Makefile.am  Makefile.in  albgi.cc  albgi.h  alignment.cc  altheora.cc  altheora.h  asteroid.h  auto_monstbase.inc  blood.cc  blood.h  bubbles.cc  build_monstbase_h.sh  cage.h  dsound.h  ecosys.cc  ecosys.pl  event.cc  fonts.h  gfx.cc  gfx.h  graphs.cc  graphs.h  hints.cc  hud.cc  hud.h  input.cc  input.h  instruct.cc  intro.cc  inventory.cc  mmam.rc  mmam_ai.cc  mmam_ai.h  mmam_aiut.cc  monstbase.h  monster.h  namelist.h  particle.cc  particle.h  (+12 more)
patch/: allegro.1.patch  alogg.1.patch
script/: build-adime.sh  build-allegro.sh  build-alogg.sh  install.sh  installer.sh
src/: Makefile.am  Makefile.in  alignment.h  asteroid.cc  bubbles.h  cage.cc  config.h.in  dsound.cc  dumpdocs.cc  event.h  gamelog.cc  gamelog.h  input.cc  mmam.cc  mmam.cpr  mmam.h  monstbase.cc  monster.cc  namelist.cc  pmask.h  qfe.cc  qfe.h  trader.cc  trader.h  trader_strip.pl
